# uld

./: Cargo.toml  README.md  a.out  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
src/: arch.rs  config.rs  layout.rs  lib.rs  linker.rs  main.rs  symbol.rs  utils.rs  writer.rs
src/arch/: x86_64.rs
tests/: lit.cfg.py  start.s
tests/cases/: argc_argv.c  arithmetic.c  bss_data.s  c_function_call.c  c_global_const.c  c_multi_file.c  c_return_42.c  c_writable_data.c  clang_driver.c  exit_42.s  function_call.s  global_data.s  hello_libc.c  large_bss_array.c  libc_printf.c  libc_printf_clang_driver.c  libc_printf_gcc_driver.c  pointer_fmt.c  recursive_fib.c  return_42.c  static_local.c  string_ops.c  writable_data.s
tests/output/: .lit_test_times.txt
tests/output/cases/Output/: return_42.c.script
tests/support/: c_helper.c  start.s
